kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env_ext/test_2.stderr
error: Expected at least 4 arguments, got 3.
 --> $DIR/test_2.rs:5:33
  |
5 | #[require_binary_static_env_ext(E, EC, DC)]
  |                                 ^^^^^^^^^
